# Ant-Based-Computer-Simulator

./: CMakeLists.txt  README.md  set_up.sh
circuits/: boost_inverter.circuit  bridge_test.circuit  inverter_classic.circuit  inverter_resistant.circuit  inverter_sensitive.circuit  nor.circuit
src/: headless_main.cpp  main.cpp
src/circuit/: CircuitLoader.cpp  CircuitLoader.h
src/core/: HexCoord.h  Types.h
src/graphics/: IRenderer.h  SFMLRenderer.cpp  SFMLRenderer.h
src/simulator/: Ant.h  Cell.h  Grid.cpp  Grid.h  SimConfig.h  Simulator.cpp  Simulator.h
tests/: TestMain.cpp  test_main.cpp
